Brazil theme added

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       display: block;
       margin-top: 40px;
       border-radius: 50%;
-      border: 2px solid white;
+      border: 2px solid rgb(0, 255, 13);
       padding: 3px;
 
 
@@ -109,14 +109,14 @@
       margin-top: 50px;
       font-size: 50px;
       font-family: Arial, sans-serif;
-      -webkit-text-fill-color: white;
+      -webkit-text-fill-color: rgb(238, 255, 0);
       /* Will override color (regardless of order) */
       letter-spacing: .4em;
     }
 
-    h2 {
+    h3 {
 
-      color: #ffffff;
+      color: #1100ff;
       font-size: 30px;
     }
 
@@ -146,8 +146,8 @@
       overflow: auto;
       padding: 20px;
       font-family: Arial, sans-serif;
-      color: rgb(255, 255, 255);
-      border: 1px solid #ffffff;
+      color: #fbff00;
+      border: 1px solid #03da27;
 
       letter-spacing: .2em;
     }
@@ -155,8 +155,9 @@
     .button1:hover {
       height: 70px;
       width: 200px;
-      color: black;
-      background-color: #ffffff;
+      color: rgb(38, 0, 255);
+      background-color: #fbff00;
+      border: 6px solid #03da27;
       font-size: large;
 
     }
@@ -175,6 +176,13 @@
       <h1>
         SAIF AHAMMOD KHAN
       </h1>
+<br><br><br>
+      <h3>
+         🇧🇷 🇧🇩
+      </h3>
+      <h3>
+        Qatar World Cup 2022
+     </h3>
       <a href="about.html"><button class="button button1">PORTFOLIO</button></a>
     </div>
   </div>
