project section updated

--- a/mywork.html
+++ b/mywork.html
@@ -87,7 +87,30 @@
           <p align="left"></p>
         </li>
       </ul>
-  
+      <h3 align="left">
+        Android Application:
+      </h3>
+      <ul>
+        <li>
+          <p align="left"></p>
+        </li>
+      </ul>
+      <h3 align="left">
+        Robotics:
+      </h3>
+      <ul>
+        <li>
+          <p align="left"></p>
+        </li>
+      </ul>
+      <h3 align="left">
+        Website:
+      </h3>
+      <ul>
+        <li>
+          <p align="left"></p>
+        </li>
+      </ul>
       
 
       <!-- Page content ends here -->
