new banner added in code

--- a/hobbies/design.html
+++ b/hobbies/design.html
@@ -69,6 +69,9 @@
         <div class="content"><img src="/hobbies/DesignImage/bannerposter/6.jpg" alt=""></div>
       </div>
       <div class="gallery-item">
+        <div class="content"><img src="/hobbies/DesignImage/bannerposter/7.png" alt=""></div>
+      </div>
+      <div class="gallery-item">
         <div class="content"><img src="/hobbies/DesignImage/wallpaper/1.png" alt=""></div>
       </div>
       <div class="gallery-item">
