--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       border-top-left-radius: 25px;
       border-bottom-right-radius: 25px;
       font-family: Arial, sans-serif;
-      margin-top: 80px;
+      margin-top: 20px;
     }
 
     .button1 {
@@ -184,7 +184,10 @@
         Qatar World Cup 2022
      </h3>
       <a href="about.html"><button class="button button1">PORTFOLIO</button></a>
+      <br>
+      <a href="Doc/cv.pdf"><button class="button button1">RESUME</button></a>
     </div>
+    
   </div>
   <div class="particles" id="particles">
 
