web base projext added

--- a/mywork.html
+++ b/mywork.html
@@ -108,7 +108,10 @@
       </h3>
       <ul>
         <li>
-          <p align="left"></p>
+          <p align="left">Personal Portfolio</p>
+        </li>
+        <li>
+          <p align="left">NSU Robotics Society</p>
         </li>
       </ul>
       
