ML projext added

--- a/mywork.html
+++ b/mywork.html
@@ -84,7 +84,10 @@
       </h3>
       <ul>
         <li>
-          <p align="left"></p>
+          <p align="left">ASSIST</p>
+        </li>
+        <li>
+          <p align="left">House Rent Prediction of Dhaka City</p>
         </li>
       </ul>
       <h3 align="left">
