--- a/mywork.html
+++ b/mywork.html
@@ -80,7 +80,7 @@
         Projects:
       </h2>
       <h3 align="left">
-        Machine Learning:
+        Artificial Intelligence:
       </h3>
       <ul>
         <li>
