--- a/education.html
+++ b/education.html
@@ -103,7 +103,7 @@
       <div class="container">
         <div class="box">
           <img src="Images/achivements/Robotics Worckshop.jpg">
-          <span>Robotics workshop - 2nd runners up </span>
+          <span>Robotics workshop - Runners up </span>
         </div>
         <div class="box">
           <img src="Images/achivements/RoboQuest Robo Soccer Runners Up.jpg">
