bRAZIL tHEME REMOVED

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       display: block;
       margin-top: 40px;
       border-radius: 50%;
-      border: 2px solid rgb(0, 255, 13);
+      border: 2px solid rgb(255, 255, 255);
       padding: 3px;
 
 
@@ -109,7 +109,7 @@
       margin-top: 50px;
       font-size: 50px;
       font-family: Arial, sans-serif;
-      -webkit-text-fill-color: rgb(238, 255, 0);
+      -webkit-text-fill-color: rgb(255, 255, 255);
       /* Will override color (regardless of order) */
       letter-spacing: .4em;
     }
@@ -146,8 +146,8 @@
       overflow: auto;
       padding: 20px;
       font-family: Arial, sans-serif;
-      color: #fbff00;
-      border: 1px solid #03da27;
+      color: #ffffff;
+      border: 1px solid #ffffff;
 
       letter-spacing: .2em;
     }
@@ -155,9 +155,9 @@
     .button1:hover {
       height: 70px;
       width: 200px;
-      color: rgb(38, 0, 255);
-      background-color: #fbff00;
-      border: 6px solid #03da27;
+      color: rgb(0, 0, 0);
+      background-color: #ffffff;
+      border: 1px solid #ffffff;
       font-size: large;
 
     }
@@ -176,13 +176,9 @@
       <h1>
         SAIF AHAMMOD KHAN
       </h1>
-<br><br><br>
-      <h3>
-         🇧🇷 🇧🇩
-      </h3>
-      <h3>
-        Qatar World Cup 2022
-     </h3>
+
+
+
       <a href="about.html"><button class="button button1">PORTFOLIO</button></a>
       <br>
       <a href="Doc/cv.pdf"><button class="button button1">RESUME</button></a>
