--- a/expertise.html
+++ b/expertise.html
@@ -58,6 +58,14 @@
         </div>
         <div class="card 3">
           <div class="card_image">
+            <img src="Images/skill icon/dart.png" />
+          </div>
+          <div class="card_title">
+            <p>Dart</p>
+          </div>
+        </div>
+        <div class="card 3">
+          <div class="card_image">
             <img src="Images/skill icon/python.png" />
           </div>
           <div class="card_title">
