--- a/expertise.html
+++ b/expertise.html
@@ -130,6 +130,21 @@
       </div>
 
       <br><br>
+      <h3 align="left">Framework: </h3>
+
+      <div class="cards-list">
+
+        <div class="card 3">
+          <div class="card_image">
+            <img src="Images/skill icon/flutter.png" />
+          </div>
+          <div class="card_title">
+            <p>Flutter</p>
+          </div>
+        </div>
+      </div>
+
+      <br><br>
       <h3 align="left">Database tool:</h3>
 
       <div class="cards-list">
