--- a/mywork.html
+++ b/mywork.html
@@ -84,10 +84,10 @@
       </h3>
       <ul>
         <li>
-          <p align="left">ASSIST</p>
+          <p align="left">ASSIST:</p>
         </li>
         <li>
-          <p align="left">House Rent Prediction of Dhaka City</p>
+          <p align="left">House Rent Prediction of Dhaka City:</p>
         </li>
       </ul>
       <h3 align="left">
