--- a/mywork.html
+++ b/mywork.html
@@ -7,7 +7,9 @@
 
   <link rel="stylesheet" href="css/style.css">
 </head>
-
+<style>
+  
+</style>
 <body>
   <!-- The sidebar -->
 
@@ -135,10 +137,10 @@
       </h3>
       <ul>
         <li>
-          <p align="left">Personal Portfolio</p>
+          <p align="left">Personal Portfolio:</p>
         </li>
         <li>
-          <p align="left">NSU Robotics Society</p>
+          <p align="left">NSU Robotics Society:</p>
         </li>
       </ul>
       
