My Work - All project icon added

--- a/mywork.html
+++ b/mywork.html
@@ -195,7 +195,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="contentprojectcard">
-                    <img src="Images/HomeProPic1.png">
+                  <img src="Images/Project Icon/assist.png">
                     <h3>ASSIST</h3>
                 </div>
             </div>
@@ -209,7 +209,7 @@
         <div class="card">
           <div class="face face1">
               <div class="contentprojectcard">
-                  <img src="Images/HomeProPic1.png">
+                <img src="Images/Project Icon/ml.jpg">
                   <h3>House Rent Prediction of Dhaka City</h3>
               </div>
           </div>
@@ -228,7 +228,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="contentprojectcard">
-                    <img src="Images/HomeProPic1.png">
+                  <img src="Images/Project Icon/shouhardo.png">
                     <h3>Shouhardo</h3>
                 </div>
             </div>
@@ -247,7 +247,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="contentprojectcard">
-                    <img src="Images/HomeProPic1.png">
+                  <img src="Images/Project Icon/hopin.png">
                     <h3>HOP IN</h3>
                 </div>
             </div>
@@ -266,7 +266,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="contentprojectcard">
-                    <img src="Images/HomeProPic1.png">
+                  <img src="Images/Project Icon/ADOAVER.png">
                     <h3>ADOAVER</h3>
                 </div>
             </div>
@@ -280,7 +280,7 @@
         <div class="card">
           <div class="face face1">
               <div class="contentprojectcard">
-                  <img src="Images/HomeProPic1.png">
+                <img src="Images/Project Icon/spider.jpg">
                   <h3>SPIDER</h3>
               </div>
           </div>
@@ -294,7 +294,7 @@
       <div class="card">
         <div class="face face1">
             <div class="contentprojectcard">
-                <img src="Images/HomeProPic1.png">
+              <img src="Images/Project Icon/dexbot.jpg">
                 <h3>Dex-Bot</h3>
             </div>
         </div>
@@ -310,7 +310,7 @@
       <div class="card">
           <div class="face face1">
               <div class="contentprojectcard">
-                  <img src="Images/HomeProPic1.png">
+                <img src="Images/Project Icon/Robosoccer.jpg">
                   <h3>Robo Soccer</h3>
               </div>
           </div>
@@ -324,7 +324,7 @@
       <div class="card">
         <div class="face face1">
             <div class="contentprojectcard">
-                <img src="Images/HomeProPic1.png">
+              <img src="Images/Project Icon/lfr.jpg">
                 <h3>Line Following Robot</h3>
             </div>
         </div>
@@ -343,7 +343,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="contentprojectcard">
-                    <img src="Images/HomeProPic1.png">
+                    <img src="Images/Project Icon/Portfollio.png">
                     <h3>PORTFOLIO</h3>
                 </div>
             </div>
@@ -357,7 +357,7 @@
         <div class="card">
           <div class="face face1">
               <div class="contentprojectcard">
-                  <img src="Images/HomeProPic1.png">
+                  <img src="Images/Project Icon/NSURS LOGO.png">
                   <h3>NSU Robotics Society</h3>
               </div>
           </div>
