--- a/expertise.html
+++ b/expertise.html
@@ -201,6 +201,37 @@
       </div>
 
       <br><br>
+      <h3 align="left">IDE: </h3>
+
+      <div class="cards-list">
+
+        <div class="card 3">
+          <div class="card_image">
+            <img src="Images/skill icon/eclipse.png" />
+          </div>
+          <div class="card_title">
+            <p>Eclipse</p>
+          </div>
+        </div>
+        <div class="card 3">
+          <div class="card_image">
+            <img src="Images/skill icon/codeblocks.png" />
+          </div>
+          <div class="card_title">
+            <p>Codeblocks</p>
+          </div>
+        </div>
+        <div class="card 3">
+          <div class="card_image">
+            <img src="Images/skill icon/visualstudiocode.png" />
+          </div>
+          <div class="card_title">
+            <p>VS Code</p>
+          </div>
+        </div>
+      </div>
+
+      <br><br>
       <h3 align="left">Libraries: </h3>
 
       <div class="cards-list">
