Assist project page added

--- a/mywork.html
+++ b/mywork.html
@@ -202,7 +202,7 @@
             <div class="face face2">
                 <div class="contentprojectcard">
                     <p>Coming Soon</p>
-                        <a href="#">Read More</a>
+                        <a href="projects/assist.html">Read More</a>
                 </div>
             </div>
         </div>
