More android project added

--- a/mywork.html
+++ b/mywork.html
@@ -258,7 +258,52 @@
                 </div>
             </div>
         </div>
+        <div class="card">
+          <div class="face face1">
+              <div class="contentprojectcard">
+                <img src="Images/Project Icon/hopin.png">
+                  <h3>HOP IN</h3>
+              </div>
+          </div>
+          <div class="face face2">
+              <div class="contentprojectcard">
+                  <p>Coming Soon</p>
+                      <a href="#">Read More</a>
+              </div>
+          </div>
+      </div>
+      <div class="card">
+        <div class="face face1">
+            <div class="contentprojectcard">
+              <img src="Images/Project Icon/android.png">
+                <h3>Tic-Tac-Toe</h3>
+            </div>
+        </div>
+        <div class="face face2">
+            <div class="contentprojectcard">
+                <p>Tictac toe is a funny game</p>
+                    <a href="#">Read More</a>
+            </div>
+        </div>
     </div>
+    </div>
+    <div class="containerpc">
+      <div class="card">
+          <div class="face face1">
+              <div class="contentprojectcard">
+                <img src="Images/Project Icon/hopin.png">
+                  <h3>HOP IN</h3>
+              </div>
+          </div>
+          <div class="face face2">
+              <div class="contentprojectcard">
+                  <p>Coming Soon</p>
+                      <a href="#">Read More</a>
+              </div>
+          </div>
+      </div>
+      
+  </div>
       <h3 align="left">
         Robotics:
       </h3>
