Some project description added

--- a/mywork.html
+++ b/mywork.html
@@ -201,7 +201,7 @@
             </div>
             <div class="face face2">
                 <div class="contentprojectcard">
-                    <p>Coming Soon</p>
+                    <p align="justify">Assist is an AI based design where it can monitor elderly or disable person through a camera and detect hand gesture and send feedback to an android app named "Assist" upon the need.</p>
                         <a href="projects/assist.html">Read More</a>
                 </div>
             </div>
@@ -234,7 +234,7 @@
             </div>
             <div class="face face2">
                 <div class="contentprojectcard">
-                    <p>Coming Soon</p>
+                    <p align="justify">Shouhardo is a platform through which users can access advanced medical information without the assistance of third parties.</p>
                         <a href="#">Read More</a>
                 </div>
             </div>
@@ -297,7 +297,7 @@
           </div>
           <div class="face face2">
               <div class="contentprojectcard">
-                  <p>Coming Soon</p>
+                  <p align="justify">HOP IN is a car-sharing service focused on students, where students get to share a car with their university mates travelling in the same direction and share the fair among themselves.</p>
                       <a href="#">Read More</a>
               </div>
           </div>
@@ -312,12 +312,12 @@
             <div class="face face1">
                 <div class="contentprojectcard">
                   <img src="Images/Project Icon/ADOAVER.png">
-                    <h3>ADOAVER</h3>
+                    <h3>AOAVER</h3>
                 </div>
             </div>
             <div class="face face2">
                 <div class="contentprojectcard">
-                    <p>Coming Soon</p>
+                    <p align="justify">AOAVER is an Exploring Robot that can avoid static obstacles and investigate places that humans cannot easily access. It is also capable of detecting a variety of obstacles.</p>
                         <a href="#">Read More</a>
                 </div>
             </div>
