--- a/mywork.html
+++ b/mywork.html
@@ -176,12 +176,14 @@
         </li>
       </ul>
       <h3 align="left">
-        Conference:
+        Special Publication:
       </h3>
       <ul>
         <li>
-          <p align="justify"><b> Understanding the Healthcare Sector in Bangladesh: Experience and Services during the COVID-19 Pandemic</b> (Ridwanul Haque, <b>Md. Saif Ahammod Khan</b>, Nasim Mahmud Mishu, Rahat Jahangir Rony, Nova Ahmed)
-            Accepted for publication: The 6th Asian CHI Symposium (SEACHI 2022).</p>
+          <p align="justify"><b>Understanding the Healthcare Sector in Bangladesh: Experiences and Services during the COVID-19 Pandemic.</b>
+            Ridwanul Haque, <b>Md. Saif Ahammod Khan</b>, Nasim Mahmud Mishu, Rahat Jahangir Rony and Nova Ahmed, North South University. Asian CHI Symposium 2022 Special Publication 
+            <b>ISBN: 978-0-9942763-2-2</b>
+                      </p>
           
         </li>
       </ul>
