--- a/about.html
+++ b/about.html
@@ -72,14 +72,14 @@
         <li>
 
           <p align="Justify">
-            <b>Research Interest:</b> Human Computing Interaction, Artificial Intelligence, & Robotics
+            <b>Research Interest:</b>Artificial Intelligence, & Robotics,  Human Computing Interaction, Internet Of Thing (IOT)
           </p>
 
         </li>
         <li>
 
           <p align="Justify">
-            <b>Hobbies:</b> Photography, Designing, Playing games.
+            <b>Hobbies:</b> Robotics, Programming, Games, Football, Photography, Traveling.
           </p>
 
         </li>
