--- a/expertise.html
+++ b/expertise.html
@@ -119,14 +119,7 @@
             <p>CSS</p>
           </div>
         </div>
-        <div class="card 3">
-          <div class="card_image">
-            <img src="Images/skill icon/xml.png" />
-          </div>
-          <div class="card_title">
-            <p>XML</p>
-          </div>
-        </div>
+
       </div>
 
       <br><br>
@@ -407,14 +400,14 @@
       </div>
       <br><br><br><br>
       <h2 align="left">
-        Soft Skill:
+        Other Skill:
       </h2>
       <div class="csoftskill">
         <div class="card">
           <div class="box">
             <div class="contentss">
-              <h3>Organized</h3>
-              <p>Always, I value well-organized work. </p>
+              <h3>Agile</h3>
+              <p>I'm capable of performing tasks in an agile culture. </p>
             </div>
           </div>
         </div>
@@ -422,8 +415,19 @@
         <div class="card">
           <div class="box">
             <div class="contentss">
+              <h3>Analytical</h3>
+              <p></p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box">
+            <div class="contentss">
+
               <h3>Leadership</h3>
-              <p>I have the capabilities and motivation to act as a team leader. </p>
+              <p>I have the capabilities and motivation to act as a team leader. </p>              
 
             </div>
           </div>
@@ -434,6 +438,25 @@
             <div class="contentss">
               <h3>Team Player</h3>
               <p>I can accomplish group tasks well and collaborate effectively in groups. </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="csoftskill">
+        <div class="card">
+          <div class="box">
+            <div class="contentss">
+              <h3>Communication</h3>
+              <p></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box">
+            <div class="contentss">
+              <h3>Problem Solver</h3>
+              <p></p>
 
             </div>
           </div>
@@ -442,13 +465,22 @@
         <div class="card">
           <div class="box">
             <div class="contentss">
-
-              <h3>Agile</h3>
-              <p>I'm capable of performing tasks in an agile culture. </p>
+              <h3>Technical writer</h3>
+              <p></p>
 
             </div>
           </div>
         </div>
+        <div class="card">
+          <div class="box">
+            <div class="contentss">
+              <h3>Organized</h3>
+        <p>Always, I value well-organized work. </p>
+
+            </div>
+          </div>
+        </div>
+        
       </div>
       <br><br><br><br>
       <!-- Page content ends here -->
