--- a/about.html
+++ b/about.html
@@ -18,9 +18,12 @@
     <a href="education.html">Education</a>
     <a href="experience.html">Experience</a>
     <a href="expertise.html">Expertise</a>
-    <a href="mywork.html">My Work</a>
+    <a href="mywork.html">Publications</a>
+    <a href="mywork.html">Projects</a>
+    <a href="contact.html">Referances</a>
     <a href="contact.html">Contact</a>
-    <button class="button button1"><a href="Doc/cv.pdf">Download CV</a></button>
+
+    <button class="button button1"><a href="Doc/cv.pdf">Resume</a></button>
   </div>
 
   <!-- Page content -->
@@ -38,58 +41,94 @@
         </div>
         <div class="overlay">MD. SAIF AHAMMOD KHAN</div>
       </div>
-
+      <p >
+        <b>Quantative Researcher || Artificial Intelligence || Robotics</b>
+      </p>
+      <p >
+        <b>Born:</b> 15 December, 1998.
+      </p>
+      <p >
+        <b>Hometown:</b> Rajshahi.
+      </p>
       <h2 align="left">
-        About Me:
+        About Saif:
       </h2>
       <div class="pstyle">
         <p align="Justify">
-          I am a <b> computer science engineer</b>.
-          My area of expertise is <b>artificial intelligence</b> and <b>android app development</b> .
-          In addition, I have knowledge of <b>robotics, graphics design, flutter app development,
-            internet of things</b> and so on. In my leisure time, I like to play FIFA, GTA V, and
-          Valorant. I enjoy doing photography, watching web series and fiction
-          movies. Football is one of my favorite sports to play and watch.
+          Saif Ahammod Khan is a researcher in the fields of Robotics 
+          and Artificial Intelligence. He holds a remarkable academic record, 
+          having graduated with Magna Cum Laude honors from North South University (NSU), 
+          where he earned a Bachelor's degree in Computer Science and Engineering (CSE). 
+          As a current MS student at NSU, Saif is embracing the opportunity to delve deeper 
+          into the complexities of Robotics and AI. He is actively engaged in various research 
+          projects, collaborating with renowned faculty members and fellow students to address 
+          real-world challenges in these fields.
         </p>
       </div>
+      <h2 align="left">
+        Career interest:
+      </h2>
+      <div class="pstyle">
+        <ul>
+          <li>
+            <p align="Justify">
+              Teaching
+            </p>
+          </li>
+          <li>
+            <p align="Justify">
+              Entrepreneurship
+            </p>
+          </li>
+        </ul>
+      </div>
 
+      <h2 align="left">
+        Research Interest:
+      </h2>
+      <div class="pstyle">
+        <ul>
+          <li>
+            <p align="Justify">
+              Artificial Intelligence & Robotics
+            </p>
+          </li>
+          <li>
+            <p align="Justify">
+              Human Computing Interaction (HCI)
+            </p>
+          </li>
+        </ul>
+      </div>
+      <h2 align="left">
+      More about saif:
+    </h2>
+    <div class="pstyle">
       <ul>
-
         <li>
           <p align="Justify">
-            <b>Birthdate:</b> 15 December, 1998
+            <b>Open for job:</b> No.
           </p>
         </li>
-
-
+        
         <li>
           <p align="Justify">
-            <b>Career Interest:</b> Teaching, Data Scientist or Software Engineer
+            <b>Language:</b> Bangla, & English.
           </p>
-
-        </li>
-
-        <li>
-
-          <p align="Justify">
-            <b>Research Interest:</b>Artificial Intelligence, & Robotics,  Human Computing Interaction, Internet Of Thing (IOT)
-          </p>
-
         </li>
         <li>
-
           <p align="Justify">
-            <b>Hobbies:</b> Robotics, Programming, Games, Football, Photography, Traveling.
+            <b>Current city:</b> Dhaka, Bangladesh.
           </p>
-
         </li>
         <li>
-
           <p align="Justify">
-            <b>Available for Job:</b> Yes
+            <b>Hobbies:</b> Watching & playing football, Photography, Playing tactical games, Watching movies & series, Graphics designing.
+
           </p>
         </li>
       </ul>
+    </div>
 
 
 
