--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     }
 
     .title {
-      font-family: 'Open Sans Condensed', sans-serif;
+      font-family: sans-serif;
       font-size: 14px;
       font-weight: 100;
       letter-spacing: 15px;
@@ -108,7 +108,7 @@
     h1 {
       margin-top: 50px;
       font-size: 50px;
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
       -webkit-text-fill-color: rgb(255, 255, 255);
       /* Will override color (regardless of order) */
       letter-spacing: .4em;
@@ -145,7 +145,7 @@
       width: 200px;
       overflow: auto;
       padding: 20px;
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
       color: #ffffff;
       border: 1px solid #ffffff;
 
