--- a/education.html
+++ b/education.html
@@ -181,23 +181,23 @@
 <!-- aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
 <div class="containerx">
   <div class="mySlidesx">
-    <div class="numbertext">1 / 6</div>
+    <div class="numbertext">1 / 4</div>
     <img src="Images/achivements/WooshWithoutWheel - 2nd Runners Up.jpg" style="width:100%">
   </div>
 
   <div class="mySlidesx">
-    <div class="numbertext">2 / 6</div>
+    <div class="numbertext">2 / 4</div>
     <img src="Images/achivements/Robotics Worckshop.jpg" style="width:100%">
   </div>
 
   <div class="mySlidesx">
-    <div class="numbertext">3 / 6</div>
+    <div class="numbertext">3 / 4</div>
     <img src="Images/achivements/RoboQuest Robo Soccer Runners Up.jpg" style="width:100%">
   </div>
 
   <div class="mySlidesx">
-    <div class="numbertext">3 / 6</div>
-    <img src="Graduate in CSE with magna cum laude.jpg" style="width:100%">
+    <div class="numbertext">4 / 4</div>
+    <img src="Images/achivements/Graduate in CSE with magna cum laude.jpg" style="width:100%">
   </div>
     
   <a class="prev" onclick="plusSlides(-1)">❮</a>
