--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
     <a href="education.html">Education</a>
     <a href="experience.html">Experience</a>
     <a href="expertise.html">Expertise</a>
-    <a href="mywork.html">Publications</a>
-    <a href="mywork.html">Projects</a>
-    <a href="contact.html">Referances</a>
+    <a href="publication.html">Publications</a>
+    <a href="project.html">Projects</a>
+    <a href="referance.html">Referances</a>
     <a href="contact.html">Contact</a>
 
     <button class="button button1"><a href="Doc/cv.pdf">Resume</a></button>
