--- a/education.html
+++ b/education.html
@@ -15,14 +15,16 @@
     <div align="center" class="sidebarlogo">
       <a href="https://saifahammod.me"><img src="Images/logo.png" alt="Saif Ahammod" style="width:70%;"></a>
     </div>
-
     <a href="about.html">About</a>
     <a class="active" href="education.html">Education</a>
     <a href="experience.html">Experience</a>
     <a href="expertise.html">Expertise</a>
-    <a href="mywork.html">My Work</a>
+    <a href="publication.html">Publications</a>
+    <a href="project.html">Projects</a>
+    <a href="referance.html">Referances</a>
     <a href="contact.html">Contact</a>
-    <button class="button button1"><a href="Doc/cv.pdf">Download CV</a></button>
+
+    <button class="button button1"><a href="Doc/cv.pdf">Resume</a></button>
   </div>
 
   <div align="center" class="content">
@@ -200,9 +202,6 @@
     <img src="Images/achivements/Graduate in CSE with magna cum laude.jpg" style="width:100%">
   </div>
     
-  <a class="prev" onclick="plusSlides(-1)">❮</a>
-  <a class="next" onclick="plusSlides(1)">❯</a>
-
   <div class="caption-container">
     <p id="caption"></p>
   </div>
@@ -218,7 +217,7 @@
       <img class="demo cursor" src="Images/achivements/RoboQuest Robo Soccer Runners Up.jpg" style="width:100%" onclick="currentSlide(3)" alt="RoboQuest Robosoccer - Runners Up">
     </div>
     <div class="column">
-      <img class="demo cursor" src="Images/achivements/Graduate in CSE with magna cum laude.jpg" style="width:100%" onclick="currentSlide(4)" alt="Graduate in CSE with magna cum laude">
+      <img class="demo cursor" src="Images/achivements/Graduate in CSE with magna cum laude.jpg" style="width:100%" onclick="currentSlide(4)" alt="24th Convocation North South University">
     </div>
     
   </div>
