--- a/expertise.html
+++ b/expertise.html
@@ -13,17 +13,18 @@
 
   <div align="center" class="sidebar">
     <div align="center" class="sidebarlogo">
-
       <a href="https://saifahammod.me"><img src="Images/logo.png" alt="Saif Ahammod" style="width:70%;"></a>
     </div>
-
     <a href="about.html">About</a>
     <a href="education.html">Education</a>
     <a href="experience.html">Experience</a>
     <a class="active" href="expertise.html">Expertise</a>
-    <a href="mywork.html">My Work</a>
+    <a href="publication.html">Publications</a>
+    <a href="project.html">Projects</a>
+    <a href="referance.html">Referances</a>
     <a href="contact.html">Contact</a>
-    <button class="button button1"><a href="Doc/cv.pdf">Download CV</a></button>
+
+    <button class="button button1"><a href="Doc/cv.pdf">Resume</a></button>
   </div>
 
   <div align="center" class="content">
