Education updated fix

--- a/education.html
+++ b/education.html
@@ -122,33 +122,75 @@
         </h2>
         <ul >
           <li><div class="bulletpoint">
-            <b>CSE440: Artificial Intelligence</b> - Supervised by NJC
+            <b>CSE440: Artificial Intelligence</b>
           </div>    
           </li>
+          <div class = "Educationdetails">
+            <b>Supervisor:</b> Nusrat Jhahan Chowdhury
+            <br>
+            <b>Project:</b> Customer Churn Prediction
+          </div>
+  
           <li><div class="bulletpoint">
-            <b>CSE445: Machine Learning</b> - Supervised by SFM1
+            <b>CSE445: Machine Learning</b>
           </div>    
           </li>
+          <div class = "Educationdetails">
+            <b>Supervisor:</b> Dr. Sifat Momen
+            <br>
+            <b>Project:</b> House Rent Prediction
+          </div>
+
           <li><div class="bulletpoint">
-            <b>CSE497: Human Computing Interaction (HCI)</b> - Supervised by NVA
+            <b>CSE497: Human Computing Interaction (HCI)</b>
           </div>    
           </li>
+          <div class = "Educationdetails">
+            <b>Supervisor:</b> Dr. Nova Ahmed
+            <br>
+            <b>Project:</b> E-Hospital
+          </div>
+
           <li><div class="bulletpoint">
-            <b>CSE 493: Cryptography</b> - Supervised by RJP
+            <b>CSE 493: Cryptography</b>
           </div>    
           </li>
+          <div class = "Educationdetails">
+            <b>Supervisor:</b> Dr. Rajesh Palit
+            <br>
+            <b>Project:</b> Password Encryption Decryption App
+          </div>
+
           <li><div class="bulletpoint">
-            <b>CSE 512: Distributed Database</b> - Supervised by LTF
+            <b>CSE 512: Distributed Database</b>
           </div>    
           </li>
+          <div class = "Educationdetails">
+            <b>Supervisor:</b> Dr. Abu Sayed Mohammad Latiful Hoque
+            <br>
+            <b>Internship:</b> eSRD-Lab E-Commerce Distributed Database Virtual Learning under vInternship.org.
+          </div>
+
           <li><div class="bulletpoint">
-            <b>CSE 533: Machine Learning</b> - Supervised by AZK
+            <b>CSE 533: Machine Learning</b>
           </div>    
           </li>
+          <div class = "Educationdetails">
+            <b>Supervisor:</b> Dr. Mohammad Ashrafuzzaman Khan
+            <br>
+            <b>Project:</b> Video Anomaly Detection by Using Machine Learning Approach
+          </div>
+
           <li><div class="bulletpoint">
-            <b>CSE 543: Introduction to Robotics</b> - Supervised by SNS1
+            <b>CSE 543: Introduction to Robotics</b>
           </div>    
           </li>
+          <div class = "Educationdetails">
+            <b>Supervisor:</b> Dr. Shahnewaz Siddique
+            <br>
+            <b>Project:</b> Mapping And Localization of UAV in Unknown Environment Using Monocular Visual Odometry
+          </div>
+
         </ul>
         <br>
 
