--- a/experience.html
+++ b/experience.html
@@ -44,17 +44,72 @@
       </h2>
       <ul>
         <li>
-          <p align="left"><b>Android App Developer</b> | <b>HOP IN</b> | August 2018 – January 2020</p>
-          
+          <div class="EducationDegree">
+            Android App Developer
+          </div>
+          <div class="EducationInstitue">
+            <b>HOP IN</b>
+          </div>
+          <div class="Educationdetails">
+            HOP IN is a car-sharing service where students get to Share-A-Car with their university mates.The system is an app based 
+            ride-sharing service which connects you with other university students traveling in the same direction. A car is shared by FOUR students.
+          </div>
+          <div class="Educationtimeperiod">
+            August 2018 – January 2020
+          </div>
         </li>
+        <br>
         <li>
-          <p align="left"><b>Founding Member</b> | <b>NSU IGNITE</b> | November 2018 – December 2021</p>
+          <div class="EducationDegree">
+            Founding Member
+          </div>
+          <div class="EducationInstitue">
+            <b>NSU Ignite</b>
+          </div>
+          <div class="Educationdetails">
+            <b>Details:</b> 
+          </div>
+          <div class="Educationtimeperiod">
+            November 2018 – Present
+          </div>
         </li>
+        <br>
         <li>
-          <p align="left"><b>Mentor and Trainer of Robotics</b> | <b>NSU ACM Student </b>| August 2018 – December 2018</p>
+          <div class="EducationDegree">
+            Mentor and Trainer of Robotics
+          </div>
+          <div class="EducationInstitue">
+            <b>NSU ACM Student Chapter</b>
+          </div>
+          <div class="Educationdetails">
+            <b>Details:</b> 
+          </div>
+          <div class="Educationtimeperiod">
+            August 2018 – December 2018 
+          </div>
         </li>
+        <br>
         <li>
-          <p align="left"><b>Senior Member</b> | <b>NSU ACM Student Chapter</b> | September 2017 – December 2018</p>
+          <div class="EducationDegree">
+            Senior Member 
+          </div>
+          <div class="EducationInstitue">
+            <b>NSU ACM Student Chapter</b>
+          </div>
+          <div class="Educationdetails">
+            <b>Details:</b> 
+          </div>
+          <div class="Educationtimeperiod">
+            September 2017  – December 2018 
+          </div>
+        </li>
+      </ul>
+      <h2 align="left">
+        Award & Certificate:
+      </h2>
+      <ul>
+        <li>
+          <p align="left"><b>Best Active Member</b> | <b>NSU ACM Student Chapter</b> | Summer 2018</p>
         </li>
       </ul>
       <h2 align="left">
@@ -63,7 +118,7 @@
       <ul>
         <li>
           <p align="left"><b>Technovation 2018</b> | <b>Organized by NSU ACM Student Chapter</b> | Spring 2018</p>
-          
+
         </li>
         <li>
           <p align="left"><b>Bit Arena 2017</b> | <b>Organized by NSU CEC</b> | Summer 2017</p>
@@ -78,40 +133,39 @@
           <p align="left"><b>RoboQuest 1.0</b> | Organized by NSU CEC | <b>Robo Soccer Segment</b></p>
         </li>
         <li>
-          <p align="left"><b>Robo Carnival</b> | Organized by BUET Robotics Society | <b>LFR and Robo Soccer Segment </b></p>
+          <p align="left"><b>Robo Carnival</b> | Organized by BUET Robotics Society | <b>LFR and Robo Soccer Segment
+            </b></p>
         </li>
         <li>
-          <p align="left"><b>Techsurgence 2019</b> | Organized by Department of ICT BUP | <b>Robo Soccer Segment </b></p>
+          <p align="left"><b>Techsurgence 2019</b> | Organized by Department of ICT BUP | <b>Robo Soccer Segment </b>
+          </p>
         </li>
         <li>
           <p align="left"><b>Robolution 2019</b> | Organized by MIST | <b>Robo Soccer Segment </b></p>
         </li>
         <li>
-          <p align="left"><b>ICASERT International Conferrence and Robo Fest</b> | Organized by Department of CSE, EWU | <b>Robo Soccer Segment</b></p>
+          <p align="left"><b>ICASERT International Conferrence and Robo Fest</b> | Organized by Department of CSE, EWU |
+            <b>Robo Soccer Segment</b></p>
         </li>
         <li>
-          <p align="left"><b>Woosh Without Wheel</b> | Organized by Robotics and Automation Society IEEE NSU Student Branch | <b>Robot Without Wheel</b></p>
+          <p align="left"><b>Woosh Without Wheel</b> | Organized by Robotics and Automation Society IEEE NSU Student
+            Branch | <b>Robot Without Wheel</b></p>
         </li>
         <li>
-          <p align="left"><b>Hackathon on Android App Development </b> | Organized by NSU Proctor Office | <b>Android Application Development</b></p>
+          <p align="left"><b>Hackathon on Android App Development </b> | Organized by NSU Proctor Office | <b>Android
+              Application Development</b></p>
         </li>
-  
+
         <li>
-          <p align="left"><b>Mecceleration 2019 </b> | Organized by Department of Mechanical and Chemical Engineering, IUT | <b>Android Application Development</b></p>
+          <p align="left"><b>Mecceleration 2019 </b> | Organized by Department of Mechanical and Chemical Engineering,
+            IUT | <b>Android Application Development</b></p>
         </li>
       </ul>
-      <h2 align="left">
-        Award:
-      </h2>
-      <ul>
-        <li>
-          <p align="left"><b>Best Active Member</b> | <b>NSU ACM Student Chapter</b> | Summer 2018</p>  
-        </li>
-      </ul>
-    <br>
-    <br>
-    <br>
-    <br>
+
+      <br>
+      <br>
+      <br>
+      <br>
       <!-- Page content ends here -->
     </div>
   </div>
