Referance updated added

--- a/referance.html
+++ b/referance.html
@@ -36,7 +36,12 @@
     </div>
     <div class="pagebackground">
       <!-- Page content -->
-      
+      <div class="firstimage">
+        <img src="Images/PagePic/reference.png" alt="Education" width="200" height="200">
+      </div>
+      <h2 align="left">
+        Referance:
+      </h2>
 
       <!-- Page content ends here -->
     </div>
