--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         <div class="card 1">
           <div class="card_image"> <img src="Images/Contact Icon/address.png" /> </div>
           <div class="card_title title-black">
-            <p>Bashundhara R/A, Dhaka</p>
+            <p>Kuril, Dhaka</p>
           </div>
         </div>
         
