--- a/about.html
+++ b/about.html
@@ -44,12 +44,6 @@
       <p >
         <b>Quantative Researcher || Artificial Intelligence || Robotics</b>
       </p>
-      <p >
-        <b>Born:</b> 15 December, 1998.
-      </p>
-      <p >
-        <b>Hometown:</b> Rajshahi.
-      </p>
       <h2 align="left">
         About Saif:
       </h2>
@@ -107,6 +101,21 @@
       <ul>
         <li>
           <p align="Justify">
+            <b>Birthdate:</b> 15 December, 1998.
+          </p>
+        </li>
+        <li>
+          <p align="Justify">
+            <b>Current city:</b> Dhaka, Bangladesh.
+          </p>
+        </li>
+        <li>
+          <p align="Justify">
+            <b>Hometown:</b> Rajshahi,  Bangladesh.
+          </p>
+        </li>
+        <li>
+          <p align="Justify">
             <b>Open for job:</b> No.
           </p>
         </li>
@@ -114,11 +123,6 @@
         <li>
           <p align="Justify">
             <b>Language:</b> Bangla, & English.
-          </p>
-        </li>
-        <li>
-          <p align="Justify">
-            <b>Current city:</b> Dhaka, Bangladesh.
           </p>
         </li>
         <li>
