--- a/expertise.html
+++ b/expertise.html
@@ -61,7 +61,7 @@
 
         <div class="card 3">
           <div class="card_image">
-            <img src="Images/skill icon/" />
+            <img src="Images/skill icon/matlab.png" />
           </div>
           <div class="card_title">
             <p>Matlab</p>
@@ -94,7 +94,7 @@
         </div>
         <div class="card 3">
           <div class="card_image">
-            <img src="Images/skill icon/" />
+            <img src="Images/skill icon/numpy.png" />
           </div>
           <div class="card_title">
             <p>Numpy</p>
@@ -136,7 +136,7 @@
             </div>
             <div class="card 3">
               <div class="card_image">
-                <img src="Images/skill icon/" />
+                <img src="Images/skill icon/spyder.png" />
               </div>
               <div class="card_title">
                 <p>Spider</p>
@@ -144,7 +144,7 @@
             </div>
             <div class="card 3">
               <div class="card_image">
-                <img src="Images/skill icon/" />
+                <img src="Images/skill icon/jupyter.png" />
               </div>
               <div class="card_title">
                 <p>Jupyter Notebook</p>
@@ -152,7 +152,7 @@
             </div>
             <div class="card 3">
               <div class="card_image">
-                <img src="Images/skill icon/" />
+                <img src="Images/skill icon/pycharm.png" />
               </div>
               <div class="card_title">
                 <p>Pycharm</p>
@@ -175,6 +175,14 @@
           </div>
           <div class="card_title">
             <p>Java</p>
+          </div>
+        </div>
+        <div class="card 3">
+          <div class="card_image">
+            <img src="Images/skill icon/AndroidStudio.png" />
+          </div>
+          <div class="card_title">
+            <p>Android Studio</p>
           </div>
         </div>
         <div class="card 3">
@@ -233,6 +241,14 @@
           </div>
           <div class="card_title">
             <p>VS Code</p>
+          </div>
+        </div>
+        <div class="card 3">
+          <div class="card_image">
+            <img src="Images/skill icon/sublime.png" />
+          </div>
+          <div class="card_title">
+            <p>Sublime Text</p>
           </div>
         </div>
       </div>
