--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         <div class="overlay">MD. SAIF AHAMMOD KHAN</div>
       </div>
       <p >
-        <b>Quantative Researcher || Artificial Intelligence || Robotics</b>
+        <b>Researcher on Artificial Intelligence & Robotics</b>
       </p>
       <h2 align="left">
         About Saif:
@@ -58,6 +58,16 @@
           projects, collaborating with renowned faculty members and fellow students to address 
           real-world challenges in these fields.
         </p>
+      </div>
+      <h2 align="left">
+        Current Job:
+      </h2>
+      <div class="pstyle">
+      
+            <p align="Justify">
+              Research assistant & part time graduate assistant at North South University
+            </p>
+        
       </div>
       <h2 align="left">
         Career interest:
@@ -84,12 +94,7 @@
         <ul>
           <li>
             <p align="Justify">
-              Artificial Intelligence & Robotics
-            </p>
-          </li>
-          <li>
-            <p align="Justify">
-              Human Computing Interaction (HCI)
+              Artificial intelligence & robotics
             </p>
           </li>
         </ul>
