--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
         </li>
         <li>
           <p align="Justify">
-            <i class="fa fa-leaf" style="font-size:24px"></i> Islam.
+            <i class=" fa fa-check-square" style='font-size:24px' ></i> Islam.
           </p>
         </li>
         <li>
@@ -174,7 +174,7 @@
       </li>
       <li>
         <p align="Justify">
-          Graphics Designing <i class="fa fa-object-group"></i>   
+          Graphics designing <i class="fa fa-object-group"></i>   
         </p>
       </li>
     </ul>
