--- a/publication.html
+++ b/publication.html
@@ -50,11 +50,11 @@
       <ul>
         <li>
           <div class="EducationDegree">
-            Title: Alpha N-V2: Shortest Path Finder Automated Delivery Robot with Real-Time Object Detection and
+            Alpha N-V2: Shortest Path Finder Automated Delivery Robot with Real-Time Object Detection and
             Avoiding System.
           </div>
           <div class="EducationInstitue">
-            <b>Journal Information:</b> Vietnam Journal of Computer Science (VJCS), Issue-7, No 4, Nov 2020.
+          Vietnam Journal of Computer Science (VJCS), Issue-7, No 4, Nov 2020.
           </div>
           <div class="EducationInstitue">
             <b>DOI:</b> https://doi.org/10.1142/S2196888820500219
@@ -96,10 +96,10 @@
       <ul>
         <li>
           <div class="EducationDegree">
-            Title: Alpha-N: Shortest Path Finder Automated Delivery Robot with Obstacle Detection and Avoiding System.
+            Alpha-N: Shortest Path Finder Automated Delivery Robot with Obstacle Detection and Avoiding System.
           </div>
           <div class="EducationInstitue">
-            <b>Conferance Information:</b> Asian Conference on Intelligent Information and Database Systems, (pp. 202-213). Springer, Cham. 
+             Asian Conference on Intelligent Information and Database Systems, (pp. 202-213). Springer, Cham. 
           </div>
           <div class="EducationInstitue">
             <b>DOI:</b> https://doi.org/10.1007/978-3-030-41964-618
@@ -136,15 +136,15 @@
       </ul>
       
       <h3 align="left">
-        Special Publication:
+        Conferance:
       </h3>
       <ul>
         <li>
           <div class="EducationDegree">
-            Title: Understanding the Healthcare Sector in Bangladesh: Experiences and Services during the COVID-19 Pandemic.
+           Understanding the Healthcare Sector in Bangladesh: Experiences and Services during the COVID-19 Pandemic.
           </div>
           <div class="EducationInstitue">
-            <b>Conferance Information:</b> Asian CHI Symposium 2022 Special Publication. 
+           Asian CHI Symposium 2022 Special Publication. 
           </div>
           <div class="EducationInstitue">
             <b>ISBN:</b> 978-0-9942763-2-2
