Career interest updated

--- a/about.html
+++ b/about.html
@@ -80,12 +80,7 @@
         <ul>
           <li>
             <p align="Justify">
-              Teaching
-            </p>
-          </li>
-          <li>
-            <p align="Justify">
-              Entrepreneurship
+              Teacher & Researcher
             </p>
           </li>
         </ul>
