Career interest updated

--- a/about.html
+++ b/about.html
@@ -80,7 +80,12 @@
         <ul>
           <li>
             <p align="Justify">
-              Teacher & Researcher
+              Teching
+            </p>
+          </li>
+          <li>
+            <p align="Justify">
+              Researching
             </p>
           </li>
         </ul>
