--- a/contact.html
+++ b/contact.html
@@ -80,12 +80,12 @@
             <img src="Images/Contact Icon/facebook.png" alt="Education" width="40" height="40">
           </div>
         </a>
-        <a href="https://twitter.com/S4IF_KHAN">
+        <a href="https://twitter.com/SaifAhammod">
           <div class="icon">
             <img src="Images/Contact Icon/twitter.png" alt="Education" width="40" height="40">
           </div>
         </a>
-        <a href="https://www.linkedin.com/in/md-saif-ahammod-khan-04/">
+        <a href="https://www.linkedin.com/in/saif-ahammod/">
           <div class="icon">
             <img src="Images/Contact Icon/linkedin.png" alt="Education" width="40" height="40">
           </div>
