Index renamed to home

--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
       </li>
       <li>
         <p align="Justify">
-          <a href="/Snowman/index.html">Playing Games</a> <i class="fa fa-gamepad"></i>   
+          <a href="/Snowman/home.html">Playing Games</a> <i class="fa fa-gamepad"></i>   
         </p>
       </li>
       <li>
