--- a/Snowman/home.html
+++ b/Snowman/home.html
@@ -44,26 +44,28 @@
                             <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                                 <ul class="navbar-nav">
                                    <li class="nav-item">
-                                        <a class="nav-link" href="home.html">Home</a>
+                                        <a class="nav-link" href="home.html">HOME</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="fighter.html">fighter</a> 
+                                        <a class="nav-link" href="fighter.html">SNOWMAN</a> 
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="team.html">team</a>
+                                        <a class="nav-link" href="team.html">CLAN</a>
                                     </li>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">
-                                            Blog
+                                            GAMES
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="blog.html"> blog</a>
-                                            <a class="dropdown-item" href="single-blog.html">Single blog</a>
+                                            <a class="dropdown-item" href="blog.html">VALORANT</a>
+                                            <a class="dropdown-item" href="single-blog.html">GTA-V</a>
+                                            <a class="dropdown-item" href="single-blog.html">FIFA - 23</a>
+                                            <a class="dropdown-item" href="single-blog.html">Euro Truck SImulator</a>
                                         </div>
                                     </li>
-                                    <li class="nav-item dropdown">
+                                    <!-- <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">
@@ -72,9 +74,9 @@
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                                             <a class="dropdown-item" href="elements.html">Elements</a>
                                         </div>
-                                    </li>
+                                    </li> -->
                                     <li class="nav-item">
-                                        <a class="nav-link" href="contact.html">Contact</a>
+                                        <a class="nav-link" href="contact.html">CONTACT</a>
                                     </li>
                                 </ul>
                             </div>
